# variable_declaration_checker

./: .flake8  README.md  pyproject.toml  variable_declaration_checker.code-workspace  workspace.code-workspace
src/: pyproject.toml
src/local_test/: .gitignore  samples.md
src/tests/: run.py
src/variable_declaration_checker/: __init__.py  flake8_variable_declaration_checker.py  variable_declaration_visitor.py  variable_scope.py  visit_result.py
