[project]
version = "0.0.7"
dependencies = [
    "pylint"
]
description = "A PyLint checker to force your variable to be declared, and not duplicately declared."
authors = [
    { name = "yueyinqiu", email = "yueyinqiu@outlook.com"}
]
name = "variable_declaration_checker"
license = { text = "MIT License" }
keywords = []

[project.urls]
Repository = "https://github.com/yueyinqiu/variable_declaration_checker.git"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["variable_declaration_checker"]
